# api/ratings/src/openapi_server/models/author.py
@@ -1,11 +1,11 @@
 # coding: utf-8
 
 """
-    Ratings
+    RatingsAPI
 
-    lawiki Ratings Api
+    API for the Ratings of laWiki web appplication. It provides all endpoints related to CRUD operatios for ratings.
 
-    The version of the OpenAPI document: 0.1
+    The version of the OpenAPI document: 1.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
 
     Do not edit the class manually.
@@ -29,7 +29,7 @@ except ImportError:
 
 class Author(BaseModel):
     """
-    Author
+    The author of a Rating
     """ # noqa: E501
     id: StrictStr = Field(description="Author's ID on database")
     name: StrictStr = Field(description="Author's name ")
