# api/ratings/src/openapi_server/models/rating_list.py
@@ -1,11 +1,11 @@
 # coding: utf-8
 
 """
-    Ratings
+    RatingsAPI
 
-    lawiki Ratings Api
+    API for the Ratings of laWiki web appplication. It provides all endpoints related to CRUD operatios for ratings.
 
-    The version of the OpenAPI document: 0.1
+    The version of the OpenAPI document: 1.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
 
     Do not edit the class manually.
@@ -20,7 +20,7 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
+from pydantic import BaseModel, ConfigDict, Field, StrictInt, StrictStr
 from typing import Any, ClassVar, Dict, List, Optional
 from openapi_server.models.rating import Rating
 try:
@@ -30,15 +30,15 @@ except ImportError:
 
 class RatingList(BaseModel):
     """
-    RatingList
+    List of Ratings. Supports pagination.
     """ # noqa: E501
-    ratings: Optional[List[Rating]] = None
-    limit: Optional[StrictInt] = None
-    offset: Optional[StrictInt] = None
-    total: Optional[StrictInt] = None
-    next: Optional[StrictStr] = None
-    previous: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["ratings", "limit", "offset", "total", "next", "previous"]
+    ratings: List[Rating]
+    total: StrictInt = Field(description="The total number of items available to return.")
+    offset: StrictInt = Field(description="The offset of the items returned (as set in the query or by default)")
+    limit: StrictInt = Field(description="The maximum number of items in the response (as set in the query or by default).")
+    next: Optional[StrictStr] = Field(description="Request to the next page of items. ( null if none)")
+    previous: Optional[StrictStr] = Field(description="Request to the next page of items. ( null if none)")
+    __properties: ClassVar[List[str]] = ["ratings", "total", "offset", "limit", "next", "previous"]
 
     model_config = {
         "populate_by_name": True,
@@ -84,6 +84,16 @@ class RatingList(BaseModel):
                 if _item:
                     _items.append(_item.to_dict())
             _dict['ratings'] = _items
+        # set to None if next (nullable) is None
+        # and model_fields_set contains the field
+        if self.next is None and "next" in self.model_fields_set:
+            _dict['next'] = None
+
+        # set to None if previous (nullable) is None
+        # and model_fields_set contains the field
+        if self.previous is None and "previous" in self.model_fields_set:
+            _dict['previous'] = None
+
         return _dict
 
     @classmethod
@@ -97,9 +107,9 @@ class RatingList(BaseModel):
 
         _obj = cls.model_validate({
             "ratings": [Rating.from_dict(_item) for _item in obj.get("ratings")] if obj.get("ratings") is not None else None,
-            "limit": obj.get("limit"),
-            "offset": obj.get("offset"),
             "total": obj.get("total"),
+            "offset": obj.get("offset"),
+            "limit": obj.get("limit"),
             "next": obj.get("next"),
             "previous": obj.get("previous")
         })
